# meta-prompt-evolution-hub

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  =2.0.0  API.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE_FINAL.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_GENERATION_4_COMPLETE.md  AUTONOMOUS_SDLC_GENERATION_5_COMPLETE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  EXECUTION_REPORT_FINAL.json  FINAL_DEPLOYMENT_REPORT_20250807_222656.json  GITHUB_WORKFLOW_NOTE.md  Makefile  PROJECT_CHARTER.md  README.md  SDLC_COMPLETE.md  SDLC_IMPLEMENTATION_COMPLETE.md  SECURITY.md  SETUP_REQUIRED.md  STRATEGIC_EVOLUTION_ROADMAP.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE.md  TERRAGON_SDLC_COMPLETION_REPORT.json  academic_research_publication_system.py  autonomous_production_deployment.py  autonomous_research_generation_5.py  autonomous_research_lightweight.py  autonomous_research_platform.py  autonomous_research_results_1755173784.json  (+139 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
backups/: backup_gen_0.json
cache_storage/: 111c43d3c91c7e65.cache  b281e40b63efae56.cache
demo_results/: comprehensive_quality_report.json  evolution_metrics.json  generation_1_quick_results.json  generation_1_results.json  generation_2_results.json  generation_2_robust_results.json  generation_3_fast_results.json  generation_3_scalable_results.json  robust_top_prompts.txt  scalability_report.json  scalable_top_prompts.txt  security_report.json  top_prompts.txt
deployment/: Dockerfile  deployment-config.json
deployment/backup/: backup.sh
deployment/docs/: deployment-guide.md  operational-runbook.md
deployment/jenkins/: Jenkinsfile
deployment/kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
deployment/monitoring/: alert_rules.yml  prometheus.yml
deployment/scripts/: deploy.sh
deployment/security/: network-policy.yaml  rbac.yaml
deployment/terraform/: main.tf  variables.tf
deployment_artifacts/: deployment_config.json  deployment_manifest.json  deployment_status.json  deployment_summary.json
deployment_artifacts/backup/: backup-strategy.json  disaster-recovery-plan.json
deployment_artifacts/cicd/: github-workflow.yml
deployment_artifacts/compliance/: ccpa-config.json  data-protection-policy.json  gdpr-compliance.json  gdpr-config.json  security-policy.json
deployment_artifacts/docker/: Dockerfile  docker-compose.yml  requirements.txt
deployment_artifacts/docs/: deployment-guide.md
deployment_artifacts/i18n/: de.json  en.json  es.json  fr.json  ja.json  zh.json
deployment_artifacts/kubernetes/: cluster_role.yaml  cluster_role_binding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network_policy.yaml  secrets.yaml  service.yaml  service_account.yaml
deployment_artifacts/monitoring/: alert_rules.yml  dashboard.json  grafana_dashboard.json  prometheus.yml
deployment_artifacts/scripts/: deploy.sh  health-check.sh  rollback.sh
deployment_artifacts/security/: network-policy.yaml  pod-security-policy.yaml  rbac-role.yaml  security-policy.json
deployment_artifacts/terraform/: iam.tf  main.tf  variables.tf
docs/: ROADMAP.md
docs/adr/: 0000-adr-template.md  0001-evolutionary-algorithm-selection.md
docs/deployment/: README.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/testing/: README.md
docs/workflows/: README.md
kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml  network_policy.yaml  service.yaml
meta_prompt_evolution/: __init__.py
meta_prompt_evolution/cli/: __init__.py  main.py
meta_prompt_evolution/core/: lightweight_engine.py
meta_prompt_evolution/deployment/: __init__.py  ab_testing.py
meta_prompt_evolution/evaluation/: __init__.py  base.py  evaluator.py
meta_prompt_evolution/evolution/: __init__.py  hub.py  population.py
meta_prompt_evolution/monitoring/: adaptive_monitor.py
meta_prompt_evolution/research/: analytics_platform.py
meta_prompt_evolution/storage/: __init__.py
monitoring/: alert_rules.yaml  grafana_dashboard.yaml  prometheus.yaml
production_deployment/: deployment_summary.json
production_deployment/docker/: Dockerfile  docker-compose.yml
production_deployment/kubernetes/: deployment.yaml  hpa.yaml  service.yaml
production_deployment/monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus.yml
production_deployment/scripts/: deploy.sh  health-check.sh
production_deployment/security/: rbac.yaml  (+2 more)
quality_reports/: quality_report_20250804_052446.json
scripts/: automation-scheduler.py  collect-metrics.py  deploy.sh  health-check.sh  health-monitor.py  rollback.sh  update-dependencies.py
tests/: __init__.py  conftest.py
(+29 files in other folders)
